--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
     <div class="container">
         <h1>Multifamily Property Appraisal (Monthly Inputs)</h1>
         <form id="appraisalForm">
-            <label for="income">Monthly Income (Total Rent):</label>
-            <input type="number" id="income" name="income" placeholder="Enter Monthly Income" required>
+            <label for="income">Monthly Income (Total Rent): <span id="incomeValue">5000</span></label>
+            <input type="range" id="income" name="income" min="0" max="20000" step="100" value="5000" oninput="updateValue('income', 'incomeValue')">
 
-            <label for="expenses">Monthly Operating Expenses:</label>
-            <input type="number" id="expenses" name="expenses" placeholder="Enter Monthly Expenses" required>
+            <label for="expenses">Monthly Operating Expenses: <span id="expensesValue">2000</span></label>
+            <input type="range" id="expenses" name="expenses" min="0" max="10000" step="100" value="2000" oninput="updateValue('expenses', 'expensesValue')">
 
-            <label for="capRate">Capitalization Rate (Annual %):</label>
-            <input type="number" id="capRate" name="capRate" placeholder="Enter Annual Cap Rate" required>
+            <label for="capRate">Capitalization Rate (Annual %): <span id="capRateValue">5</span>%</label>
+            <input type="range" id="capRate" name="capRate" min="0" max="20" step="0.1" value="5" oninput="updateValue('capRate', 'capRateValue')">
 
-            <label for="grm">Gross Rent Multiplier (Annual):</label>
-            <input type="number" id="grm" name="grm" placeholder="Enter Annual GRM" required>
+            <label for="grm">Gross Rent Multiplier (Annual): <span id="grmValue">10</span></label>
+            <input type="range" id="grm" name="grm" min="1" max="20" step="0.1" value="10" oninput="updateValue('grm', 'grmValue')">
 
             <button type="button" onclick="calculateAppraisal()">Calculate Appraisal</button>
         </form>
         <div id="result"></div>
     </div>
+
+    <!-- Include jsPDF library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <!-- Link to JavaScript file -->
     <script src="app.js"></script>
 </body>
 </html>
-
